Bug 62363 - Data labels overlap in pie chart for small pies when "best fit" placement option is set.
Summary: Data labels overlap in pie chart for small pies when "best fit" placement opt...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: Other All
: medium normal
Assignee: Dennis Francis
URL:
Whiteboard: target:6.0.0 target:5.4.2 target:5.3.7
Keywords: bibisected, bisected, regression
: 66414 69115 79617 99288 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-03-15 09:15 UTC by Domingo Sacristan
Modified: 2017-08-30 18:54 UTC (History)
13 users (show)

See Also:
Crash report or crash signature:


Attachments
Two examples of data labels position (22.16 KB, application/vnd.oasis.opendocument.text)
2013-03-15 09:15 UTC, Domingo Sacristan
Details
Pie chart with LO3.6 -> ok (15.10 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-04-10 14:57 UTC, Samuel
Details
Pie chart with LO3.6 -> ok (pdf) (10.38 KB, application/pdf)
2013-04-10 14:57 UTC, Samuel
Details
Pie chart LO3.6 opened in LO4.0 -> not ok (pdf) (10.37 KB, application/pdf)
2013-04-10 15:00 UTC, Samuel
Details
Pie chart with placement outside in LO4.0 -> not ok (14.95 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-04-10 15:01 UTC, Samuel
Details
Pie chart with placement outside in LO4.0 -> not ok (pdf) (10.37 KB, application/pdf)
2013-04-10 15:02 UTC, Samuel
Details
Pie in OOo 4.1.2 also unusable (28.54 KB, image/png)
2016-04-15 04:31 UTC, Andrew
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Domingo Sacristan 2013-03-15 09:15:14 UTC
Created attachment 76551 [details]
Two examples of data labels position

Problem by formatting Chart data labels.Values are by placement outside overlapping. The only way to placement the values properly is the option placement "Best fit", but this option place the values inside the chart. If the values inside the chart, there are some problems with the visibility of the values if the background colour of data areas is similar to the font color.

This is for us a significant problem because we generate documents over office automation and we have a lot of charts on document.
Comment 1 Jorendc 2013-03-20 20:54:35 UTC
Hi,

Thanks for reporting. I can confirm this improper behavior.
As you mention you work a lot with this feature... what do you suggest to do about it? I can't determine "how to do it in a good way"/"what is the best solution"? 

We can move the labels far away of the chart, but that'll not make it easier to read.
Or is the best solution to let them show _inside_ the chart area, and make the colors more visible.

Thanks for your feedback and expertise.
Kind regards,
Joren
Comment 2 Cor Nouws 2013-03-20 21:01:13 UTC
(In reply to comment #1)

> We can move the labels far away of the chart, but that'll not make it easier
> to read.

There's enough space in the circle (in most cases...) to move them a bit around maybe ?
Comment 3 Cor Nouws 2013-03-20 21:02:20 UTC
(In reply to comment #2)

> There's enough space in the circle (in most cases...) to move them a bit
> around maybe ?

in the circle = 'outside and close to the circle' (of course)
Comment 4 Samuel 2013-04-10 14:55:50 UTC
I think the problem is the LibreOffice 4 feature "Automatically rotate chart axis labels if they are overlapping."

https://www.libreoffice.org/download/4-0-new-features-and-fixes/

Pie chart value labels are not usable with LibreOffice 4 and small values.
Comment 5 Samuel 2013-04-10 14:57:12 UTC
Created attachment 77750 [details]
Pie chart with LO3.6 -> ok

Pie chart with LO3.6 -> ok
Comment 6 Samuel 2013-04-10 14:57:50 UTC
Created attachment 77751 [details]
Pie chart with LO3.6 -> ok (pdf)

Pie chart with LO3.6 -> ok (pdf)
Comment 7 Samuel 2013-04-10 15:00:18 UTC
Created attachment 77752 [details]
Pie chart LO3.6 opened in LO4.0 -> not ok (pdf)

Pie chart LO3.6 opened in LO4.0 -> not ok (pdf)
Comment 8 Samuel 2013-04-10 15:01:28 UTC
Created attachment 77753 [details]
Pie chart with placement outside in LO4.0 -> not ok

Pie chart with placement outside in LO4.0 -> not ok
Comment 9 Samuel 2013-04-10 15:02:10 UTC
Created attachment 77754 [details]
Pie chart with placement outside in LO4.0 -> not ok (pdf)

Pie chart with placement outside in LO4.0 -> not ok (pdf)
Comment 10 Cor Nouws 2013-04-10 19:40:36 UTC
@samuel:
thanks for the testing and examples - looks as a regression.

@muthu (in cc) can you pls have a look? Thanks!
Comment 11 Muthu 2013-04-11 05:12:37 UTC
Thanks for the detailed info.

Assigning it to myself.
Comment 12 Muthu 2013-04-11 05:56:02 UTC
Can you please confirm if the bug is because of
http://cgit.freedesktop.org/libreoffice/core/commit/?id=228ba082d3148f13eed79e9cdd682953cccaab1c

I reverted this and checked and the bug is still occurring. (maybe i missed something?)

[Did somebody already do a bibisect?]
Comment 13 Muthu 2013-04-11 06:02:50 UTC
Debugged this further. The internal labels choice is because of:
http://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-4-0&id=fc04a3a9702580902312f5e8d6f3abd52f108663
[And looks like the choice is on purpose - CC'ing kohei]

Still trying to find what broke the external placement.
Comment 14 Kohei Yoshida 2013-04-11 13:17:35 UTC
(In reply to comment #13)
> Debugged this further. The internal labels choice is because of:
> http://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-4-
> 0&id=fc04a3a9702580902312f5e8d6f3abd52f108663
> [And looks like the choice is on purpose - CC'ing kohei]

Yes, that's on purpose; the "best fit" should try to fit the label within the pie as best as it can, not outside of it.
Comment 15 Samuel 2013-04-14 18:26:45 UTC
We have a lot of "broken" documents with pie charts in the office after upgrade to LibreOffice 4.

It would be great if you find a solution for the placement with small values.
Comment 16 Jorendc 2013-05-02 20:44:23 UTC
Remove bibisect tag (see Comment 13).
Comment 17 Michael Stahl (allotropia) 2013-07-01 13:09:35 UTC
so it looks like this problem is in Chart not Writer
Comment 18 Samuel 2013-07-04 15:42:04 UTC
yes it is a Chart problem.
Comment 19 Muthu 2013-07-05 09:15:41 UTC
Assigning this to kohei for resolution.

[I have little knowledge about the reason for the change, unfortunately :( ]
Comment 20 Samuel 2013-09-09 10:15:06 UTC
*** Bug 69115 has been marked as a duplicate of this bug. ***
Comment 21 Samuel 2014-04-29 16:35:39 UTC
Same problem in LibreOffice 4.2.3.3
Comment 22 Kohei Yoshida 2014-05-18 16:56:57 UTC
*** Bug 66414 has been marked as a duplicate of this bug. ***
Comment 23 Jorendc 2014-07-21 17:08:24 UTC
*** Bug 79617 has been marked as a duplicate of this bug. ***
Comment 24 Robinson Tryon (qubit) 2015-03-05 18:40:50 UTC
(In reply to Jorendc from comment #16)
> Remove bibisect tag (see Comment 13).

Whiteboard -> bibisectNotNeeded
Comment 25 Matthew Francis 2015-04-09 03:07:16 UTC
The commits involved in this have already been identified in comments, so let's call this "bisected"
Comment 26 Robinson Tryon (qubit) 2015-12-13 11:09:23 UTC Comment hidden (obsolete)
Comment 27 raal 2016-04-14 14:56:37 UTC
*** Bug 99288 has been marked as a duplicate of this bug. ***
Comment 28 Andrew 2016-04-15 04:31:49 UTC
Created attachment 124348 [details]
Pie in OOo 4.1.2 also unusable

To make this type of charts always usable, needed feature of manual anignment labels as in ms office.
Comment 29 Xisco Faulí 2016-10-03 09:24:01 UTC
Adding Cc: to Kohei Yoshida
Comment 30 Commit Notification 2017-08-28 08:44:00 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8c8edfabdee656ac5a9a0b1106f90baf315f1dd4

tdf#62363: When pie chart sector is too small do "Outside" placement

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 31 Commit Notification 2017-08-28 19:04:35 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=03add51224dff65d2238832d3e1b8abfa5ebcc02&h=libreoffice-5-4

tdf#62363: When pie chart sector is too small do "Outside" placement

It will be available in 5.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 32 Commit Notification 2017-08-28 19:04:55 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d44e12f1f77514059375e6da3f981a992ff7de7e&h=libreoffice-5-3

tdf#62363: When pie chart sector is too small do "Outside" placement

It will be available in 5.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 33 Xisco Faulí 2017-08-30 18:54:23 UTC
Verified in

Version: 6.0.0.0.alpha0+
Build ID: 78960ad06faca055a6d97afbc764c902d5d07f6f
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-08-30_06:31:19
Locale: es-ES (es_ES); Calc: group