tdf#62363: When pie chart sector is too small do "Outside" placement

...of its label when "Best fit" label placement setting is used.

Change-Id: Id201d922505de0e134286f4772abe282bb0722bc
Reviewed-on: https://gerrit.libreoffice.org/41572
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>